src/main/resources/k8s/api-gateway/app-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: prod
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIP
